gitops/platform/observability/operator/overlays/development/rendered.yaml
{
  "apiVersion": "v1",
  "automountServiceAccountToken": true,
  "kind": "ServiceAccount",
  "metadata": {
    "labels": {
      "app": "kube-prometheus-stack-operator",
      "app.kubernetes.io/component": "prometheus-operator",
      "app.kubernetes.io/instance": "atlas-monitoring",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "kube-prometheus-stack-prometheus-operator",
      "app.kubernetes.io/part-of": "kube-prometheus-stack",
      "app.kubernetes.io/version": "92.3.0",
      "chart": "kube-prometheus-stack-92.3.0",
      "heritage": "Helm",
      "release": "atlas-monitoring"
    },
    "name": "atlas-monitoring-operator",
    "namespace": "atlas-monitoring"
  }
}
---
{
  "apiVersion": "rbac.authorization.k8s.io/v1",
  "kind": "ClusterRole",
  "metadata": {
    "labels": {
      "app": "kube-prometheus-stack-operator",
      "app.kubernetes.io/component": "prometheus-operator",
      "app.kubernetes.io/instance": "atlas-monitoring",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "kube-prometheus-stack-prometheus-operator",
      "app.kubernetes.io/part-of": "kube-prometheus-stack",
      "app.kubernetes.io/version": "92.3.0",
      "chart": "kube-prometheus-stack-92.3.0",
      "heritage": "Helm",
      "release": "atlas-monitoring"
    },
    "name": "atlas-monitoring-operator"
  },
  "rules": [
    {
      "apiGroups": [
        "monitoring.coreos.com"
      ],
      "resources": [
        "alertmanagers",
        "prometheusagents",
        "prometheuses",
        "thanosrulers"
      ],
      "verbs": [
        "patch"
      ]
    },
    {
      "apiGroups": [
        "monitoring.coreos.com"
      ],
      "resources": [
        "alertmanagers/status",
        "podmonitors/status",
        "probes/status",
        "prometheuses/status",
        "prometheusagents/status",
        "prometheusrules/status",
        "scrapeconfigs/status",
        "servicemonitors/status",
        "thanosrulers/status"
      ],
      "verbs": [
        "create",
        "update",
        "patch",
        "delete"
      ]
    },
    {
      "apiGroups": [
        "monitoring.coreos.com"
      ],
      "resources": [
        "alertmanagers/finalizers",
        "prometheusagents/finalizers",
        "prometheuses/finalizers",
        "thanosrulers/finalizers"
      ],
      "verbs": [
        "update"
      ]
    },
    {
      "apiGroups": [
        "monitoring.coreos.com"
      ],
      "resources": [
        "alertmanagers",
        "alertmanagerconfigs",
        "podmonitors",
        "probes",
        "prometheusagents",
        "prometheuses",
        "prometheusrules",
        "servicemonitors",
        "scrapeconfigs",
        "thanosrulers"
      ],
      "verbs": [
        "get",
        "list",
        "watch"
      ]
    },
    {
      "apiGroups": [
        "apps"
      ],
      "resources": [
        "statefulsets"
      ],
      "verbs": [
        "get",
        "list",
        "watch",
        "create",
        "update",
        "patch",
        "delete"
      ]
    },
    {
      "apiGroups": [
        ""
      ],
      "resources": [
        "configmaps",
        "secrets"
      ],
      "verbs": [
        "get",
        "list",
        "watch",
        "create",
        "update",
        "delete"
      ]
    },
    {
      "apiGroups": [
        ""
      ],
      "resources": [
        "pods"
      ],
      "verbs": [
        "list",
        "delete"
      ]
    },
    {
      "apiGroups": [
        ""
      ],
      "resources": [
        "services",
        "services/finalizers",
        "endpoints"
      ],
      "verbs": [
        "get",
        "create",
        "update",
        "delete"
      ]
    },
    {
      "apiGroups": [
        ""
      ],
      "resources": [
        "nodes"
      ],
      "verbs": [
        "list",
        "watch"
      ]
    },
    {
      "apiGroups": [
        ""
      ],
      "resources": [
        "namespaces"
      ],
      "verbs": [
        "get",
        "list",
        "watch"
      ]
    },
    {
      "apiGroups": [
        "",
        "events.k8s.io"
      ],
      "resources": [
        "events"
      ],
      "verbs": [
        "patch",
        "create"
      ]
    },
    {
      "apiGroups": [
        "networking.k8s.io"
      ],
      "resources": [
        "ingresses"
      ],
      "verbs": [
        "get",
        "list",
        "watch"
      ]
    },
    {
      "apiGroups": [
        "storage.k8s.io"
      ],
      "resources": [
        "storageclasses"
      ],
      "verbs": [
        "get"
      ]
    },
    {
      "apiGroups": [
        "discovery.k8s.io"
      ],
      "resources": [
        "endpointslices"
      ],
      "verbs": [
        "get",
        "create",
        "list",
        "watch",
        "update",
        "delete"
      ]
    }
  ]
}
---
{
  "apiVersion": "rbac.authorization.k8s.io/v1",
  "kind": "ClusterRoleBinding",
  "metadata": {
    "labels": {
      "app": "kube-prometheus-stack-operator",
      "app.kubernetes.io/component": "prometheus-operator",
      "app.kubernetes.io/instance": "atlas-monitoring",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "kube-prometheus-stack-prometheus-operator",
      "app.kubernetes.io/part-of": "kube-prometheus-stack",
      "app.kubernetes.io/version": "92.3.0",
      "chart": "kube-prometheus-stack-92.3.0",
      "heritage": "Helm",
      "release": "atlas-monitoring"
    },
    "name": "atlas-monitoring-operator"
  },
  "roleRef": {
    "apiGroup": "rbac.authorization.k8s.io",
    "kind": "ClusterRole",
    "name": "atlas-monitoring-operator"
  },
  "subjects": [
    {
      "kind": "ServiceAccount",
      "name": "atlas-monitoring-operator",
      "namespace": "atlas-monitoring"
    }
  ]
}
---
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "labels": {
      "app": "kube-prometheus-stack-operator",
      "app.kubernetes.io/component": "prometheus-operator",
      "app.kubernetes.io/instance": "atlas-monitoring",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "kube-prometheus-stack-prometheus-operator",
      "app.kubernetes.io/part-of": "kube-prometheus-stack",
      "app.kubernetes.io/version": "92.3.0",
      "chart": "kube-prometheus-stack-92.3.0",
      "heritage": "Helm",
      "release": "atlas-monitoring"
    },
    "name": "atlas-monitoring-operator",
    "namespace": "atlas-monitoring"
  },
  "spec": {
    "ports": [
      {
        "name": "https",
        "port": 443,
        "targetPort": "https"
      }
    ],
    "selector": {
      "app": "kube-prometheus-stack-operator",
      "release": "atlas-monitoring"
    },
    "type": "ClusterIP"
  }
}
---
{
  "apiVersion": "apps/v1",
  "kind": "Deployment",
  "metadata": {
    "labels": {
      "app": "kube-prometheus-stack-operator",
      "app.kubernetes.io/component": "prometheus-operator",
      "app.kubernetes.io/instance": "atlas-monitoring",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "kube-prometheus-stack-prometheus-operator",
      "app.kubernetes.io/part-of": "kube-prometheus-stack",
      "app.kubernetes.io/version": "92.3.0",
      "chart": "kube-prometheus-stack-92.3.0",
      "heritage": "Helm",
      "release": "atlas-monitoring"
    },
    "name": "atlas-monitoring-operator",
    "namespace": "atlas-monitoring"
  },
  "spec": {
    "replicas": 1,
    "revisionHistoryLimit": 10,
    "selector": {
      "matchLabels": {
        "app": "kube-prometheus-stack-operator",
        "release": "atlas-monitoring"
      }
    },
    "template": {
      "metadata": {
        "labels": {
          "app": "kube-prometheus-stack-operator",
          "app.kubernetes.io/component": "prometheus-operator",
          "app.kubernetes.io/instance": "atlas-monitoring",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "kube-prometheus-stack-prometheus-operator",
          "app.kubernetes.io/part-of": "kube-prometheus-stack",
          "app.kubernetes.io/version": "92.3.0",
          "chart": "kube-prometheus-stack-92.3.0",
          "heritage": "Helm",
          "release": "atlas-monitoring"
        }
      },
      "spec": {
        "automountServiceAccountToken": true,
        "containers": [
          {
            "args": [
              "--kubelet-service=kube-system/atlas-monitoring-kubelet",
              "--kubelet-endpoints=true",
              "--kubelet-endpointslice=false",
              "--localhost=127.0.0.1",
              "--prometheus-config-reloader=quay.io/prometheus-operator/prometheus-config-reloader:v0.94.1@sha256:06b52bd4dbe3ed6dd5905aadaf8b9987d9da4c31d37bb86deaadae68cee2d26b",
              "--config-reloader-cpu-request=10m",
              "--config-reloader-cpu-limit=0",
              "--config-reloader-memory-request=32Mi",
              "--config-reloader-memory-limit=64Mi",
              "--secret-field-selector=type!=kubernetes.io/dockercfg,type!=helm.sh/release.v1",
              "--web.enable-tls=true",
              "--web.cert-file=/cert/tls.crt",
              "--web.key-file=/cert/tls.key",
              "--web.listen-address=:10250",
              "--web.tls-min-version=VersionTLS13"
            ],
            "env": [
              {
                "name": "GOGC",
                "value": "30"
              }
            ],
            "image": "quay.io/prometheus-operator/prometheus-operator:v0.94.1@sha256:7c88d4e7bae63bd8d0f8da986054337c23b4472fa8d3c6817f5bc4b8407a2d6a",
            "imagePullPolicy": "IfNotPresent",
            "livenessProbe": {
              "failureThreshold": 3,
              "httpGet": {
                "path": "/healthz",
                "port": "https",
                "scheme": "HTTPS"
              },
              "initialDelaySeconds": 0,
              "periodSeconds": 10,
              "successThreshold": 1,
              "timeoutSeconds": 1
            },
            "name": "kube-prometheus-stack",
            "ports": [
              {
                "containerPort": 10250,
                "name": "https"
              }
            ],
            "readinessProbe": {
              "failureThreshold": 3,
              "httpGet": {
                "path": "/healthz",
                "port": "https",
                "scheme": "HTTPS"
              },
              "initialDelaySeconds": 0,
              "periodSeconds": 10,
              "successThreshold": 1,
              "timeoutSeconds": 1
            },
            "resources": {
              "limits": {
                "memory": "384Mi"
              },
              "requests": {
                "cpu": "100m",
                "memory": "128Mi"
              }
            },
            "securityContext": {
              "allowPrivilegeEscalation": false,
              "capabilities": {
                "drop": [
                  "ALL"
                ]
              },
              "readOnlyRootFilesystem": true
            },
            "volumeMounts": [
              {
                "mountPath": "/cert",
                "name": "tls-secret",
                "readOnly": true
              }
            ]
          }
        ],
        "nodeSelector": {
          "kubernetes.io/os": "linux",
          "node-role.local/compute": "true"
        },
        "securityContext": {
          "fsGroup": 65534,
          "runAsGroup": 65534,
          "runAsNonRoot": true,
          "runAsUser": 65534,
          "seccompProfile": {
            "type": "RuntimeDefault"
          }
        },
        "serviceAccountName": "atlas-monitoring-operator",
        "terminationGracePeriodSeconds": 30,
        "volumes": [
          {
            "name": "tls-secret",
            "secret": {
              "defaultMode": 420,
              "secretName": "atlas-monitoring-admission"
            }
          }
        ]
      }
    }
  }
}
---
{
  "apiVersion": "admissionregistration.k8s.io/v1",
  "kind": "MutatingWebhookConfiguration",
  "metadata": {
    "annotations": {
      "cert-manager.io/inject-ca-from": "atlas-monitoring/atlas-monitoring-admission",
      "certmanager.k8s.io/inject-ca-from": "atlas-monitoring/atlas-monitoring-admission"
    },
    "labels": {
      "app": "kube-prometheus-stack-admission",
      "app.kubernetes.io/component": "prometheus-operator-webhook",
      "app.kubernetes.io/instance": "atlas-monitoring",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "kube-prometheus-stack-prometheus-operator",
      "app.kubernetes.io/part-of": "kube-prometheus-stack",
      "app.kubernetes.io/version": "92.3.0",
      "chart": "kube-prometheus-stack-92.3.0",
      "heritage": "Helm",
      "release": "atlas-monitoring"
    },
    "name": "atlas-monitoring-admission"
  },
  "webhooks": [
    {
      "admissionReviewVersions": [
        "v1",
        "v1beta1"
      ],
      "clientConfig": {
        "service": {
          "name": "atlas-monitoring-operator",
          "namespace": "atlas-monitoring",
          "path": "/admission-prometheusrules/mutate"
        }
      },
      "failurePolicy": "Fail",
      "name": "prometheusrulemutate.monitoring.coreos.com",
      "rules": [
        {
          "apiGroups": [
            "monitoring.coreos.com"
          ],
          "apiVersions": [
            "*"
          ],
          "operations": [
            "CREATE",
            "UPDATE"
          ],
          "resources": [
            "prometheusrules"
          ]
        }
      ],
      "sideEffects": "None",
      "timeoutSeconds": 10
    }
  ]
}
---
{
  "apiVersion": "admissionregistration.k8s.io/v1",
  "kind": "ValidatingWebhookConfiguration",
  "metadata": {
    "annotations": {
      "cert-manager.io/inject-ca-from": "atlas-monitoring/atlas-monitoring-admission",
      "certmanager.k8s.io/inject-ca-from": "atlas-monitoring/atlas-monitoring-admission"
    },
    "labels": {
      "app": "kube-prometheus-stack-admission",
      "app.kubernetes.io/component": "prometheus-operator-webhook",
      "app.kubernetes.io/instance": "atlas-monitoring",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "kube-prometheus-stack-prometheus-operator",
      "app.kubernetes.io/part-of": "kube-prometheus-stack",
      "app.kubernetes.io/version": "92.3.0",
      "chart": "kube-prometheus-stack-92.3.0",
      "heritage": "Helm",
      "release": "atlas-monitoring"
    },
    "name": "atlas-monitoring-admission"
  },
  "webhooks": [
    {
      "admissionReviewVersions": [
        "v1",
        "v1beta1"
      ],
      "clientConfig": {
        "service": {
          "name": "atlas-monitoring-operator",
          "namespace": "atlas-monitoring",
          "path": "/admission-prometheusrules/validate"
        }
      },
      "failurePolicy": "Fail",
      "name": "prometheusrulevalidate.monitoring.coreos.com",
      "rules": [
        {
          "apiGroups": [
            "monitoring.coreos.com"
          ],
          "apiVersions": [
            "*"
          ],
          "operations": [
            "CREATE",
            "UPDATE"
          ],
          "resources": [
            "prometheusrules"
          ]
        }
      ],
      "sideEffects": "None",
      "timeoutSeconds": 10
    },
    {
      "admissionReviewVersions": [
        "v1",
        "v1beta1"
      ],
      "clientConfig": {
        "service": {
          "name": "atlas-monitoring-operator",
          "namespace": "atlas-monitoring",
          "path": "/admission-alertmanagerconfigs/validate"
        }
      },
      "failurePolicy": "Fail",
      "name": "alertmanagerconfigsvalidate.monitoring.coreos.com",
      "rules": [
        {
          "apiGroups": [
            "monitoring.coreos.com"
          ],
          "apiVersions": [
            "v1alpha1"
          ],
          "operations": [
            "CREATE",
            "UPDATE"
          ],
          "resources": [
            "alertmanagerconfigs"
          ]
        }
      ],
      "sideEffects": "None",
      "timeoutSeconds": 10
    }
  ]
}
---
{
  "apiVersion": "cert-manager.io/v1",
  "kind": "Certificate",
  "metadata": {
    "name": "atlas-monitoring-root-cert",
    "namespace": "atlas-monitoring"
  },
  "spec": {
    "commonName": "ca.webhook.kube-prometheus-stack",
    "duration": "43800h0m0s",
    "isCA": true,
    "issuerRef": {
      "name": "atlas-monitoring-self-signed-issuer"
    },
    "secretName": "atlas-monitoring-root-cert"
  }
}
---
{
  "apiVersion": "cert-manager.io/v1",
  "kind": "Certificate",
  "metadata": {
    "name": "atlas-monitoring-admission",
    "namespace": "atlas-monitoring"
  },
  "spec": {
    "commonName": "atlas-monitoring-operator",
    "dnsNames": [
      "atlas-monitoring-operator",
      "atlas-monitoring-operator.atlas-monitoring.svc"
    ],
    "duration": "8760h0m0s",
    "issuerRef": {
      "name": "atlas-monitoring-root-issuer"
    },
    "secretName": "atlas-monitoring-admission"
  }
}
---
{
  "apiVersion": "cert-manager.io/v1",
  "kind": "Issuer",
  "metadata": {
    "name": "atlas-monitoring-self-signed-issuer",
    "namespace": "atlas-monitoring"
  },
  "spec": {
    "selfSigned": {}
  }
}
---
{
  "apiVersion": "cert-manager.io/v1",
  "kind": "Issuer",
  "metadata": {
    "name": "atlas-monitoring-root-issuer",
    "namespace": "atlas-monitoring"
  },
  "spec": {
    "ca": {
      "secretName": "atlas-monitoring-root-cert"
    }
  }
}
